// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssociatedCompanyJobsComponent should display company jobs 1`] = `
<pf-peer-job-association-associated-jobs
  newAssociations={[Function Array]}
  removeNewAssociation={[Function EventEmitter]}
  removePreviousAssociation={[Function EventEmitter]}
  undoRemovePreviousAssociation={[Function EventEmitter]}
>
  <div
    class="job-association-associated-jobs"
    id="job-association-associated-jobs"
  >
    <h5>
      Matched Jobs
    </h5>
    <div
      class="position-relative"
    >
      <pf-async-container
        ng-reflect-hide-reload-button="true"
        ng-reflect-loading-error-message="Error loading associations"
      >
        
        
        <div>
          <table>
            <thead>
              <tr>
                <th
                  class="buttons"
                />
                <th
                  class="saved"
                />
                <th
                  class="title"
                >
                  Title
                </th>
                <th
                  class="code"
                >
                  Code
                </th>
              </tr>
            </thead>
            <tbody>
              
              <tr>
                <td>
                  <button
                    class="association-action-button"
                    title="Remove"
                  >
                    <fa-icon
                      icon="times"
                    />
                  </button>
                </td>
                <td>
                  <pf-half-complete-icon
                    title="Unsaved Match"
                  />
                </td>
                <td
                  class="font-italic show-tooltip"
                >
                  Job Title
                </td>
                <td
                  class="font-italic show-tooltip"
                >
                  001
                </td>
              </tr>
              
            </tbody>
          </table>
        </div>
      </pf-async-container>
    </div>
    
  </div>
</pf-peer-job-association-associated-jobs>
`;

exports[`AssociatedCompanyJobsComponent should render different messaging if there was an error 1`] = `
<pf-peer-job-association-associated-jobs
  loadingPreviousAssociations="false"
  loadingPreviousAssociationsError={[Function Boolean]}
  newAssociations={[Function Array]}
  previousAssociations={[Function Array]}
  removeNewAssociation={[Function EventEmitter]}
  removePreviousAssociation={[Function EventEmitter]}
  undoRemovePreviousAssociation={[Function EventEmitter]}
>
  <div
    class="job-association-associated-jobs"
    id="job-association-associated-jobs"
  >
    <h5>
      Matched Jobs
    </h5>
    <div
      class="position-relative"
    >
      <pf-async-container
        ng-reflect-hide-reload-button="true"
        ng-reflect-loading="false"
        ng-reflect-loading-error="true"
        ng-reflect-loading-error-message="Error loading associations"
      >
        
        <div
          class="loading-blanket no-opacity"
          style="opacity: 0.8;"
        >
          <div
            class="loading-blanket-center"
          >
            
            
            
            <div
              class="d-flex flex-column align-items-center alert alert-danger"
            >
              <pf-error-indicator />
              
            </div>
          </div>
        </div>
        
      </pf-async-container>
    </div>
    
  </div>
</pf-peer-job-association-associated-jobs>
`;

exports[`AssociatedCompanyJobsComponent should render the table if there are only company jobs 1`] = `
<pf-peer-job-association-associated-jobs
  loadingPreviousAssociations="false"
  newAssociations={[Function Array]}
  previousAssociations={[Function Array]}
  removeNewAssociation={[Function EventEmitter]}
  removePreviousAssociation={[Function EventEmitter]}
  undoRemovePreviousAssociation={[Function EventEmitter]}
>
  <div
    class="job-association-associated-jobs"
    id="job-association-associated-jobs"
  >
    <h5>
      Matched Jobs
    </h5>
    <div
      class="position-relative"
    >
      <pf-async-container
        ng-reflect-hide-reload-button="true"
        ng-reflect-loading="false"
        ng-reflect-loading-error-message="Error loading associations"
      >
        
        
        <div>
          <table>
            <thead>
              <tr>
                <th
                  class="buttons"
                />
                <th
                  class="saved"
                />
                <th
                  class="title"
                >
                  Title
                </th>
                <th
                  class="code"
                >
                  Code
                </th>
              </tr>
            </thead>
            <tbody>
              
              <tr>
                <td>
                  <button
                    class="association-action-button"
                    title="Remove"
                  >
                    <fa-icon
                      icon="times"
                    />
                  </button>
                </td>
                <td>
                  <pf-half-complete-icon
                    title="Unsaved Match"
                  />
                </td>
                <td
                  class="font-italic show-tooltip"
                >
                  Job Title
                </td>
                <td
                  class="font-italic show-tooltip"
                >
                  001
                </td>
              </tr>
              
            </tbody>
          </table>
        </div>
      </pf-async-container>
    </div>
    
  </div>
</pf-peer-job-association-associated-jobs>
`;

exports[`AssociatedCompanyJobsComponent should render the table if there are only previous associations 1`] = `
<pf-peer-job-association-associated-jobs
  loadingPreviousAssociations="false"
  newAssociations={[Function Array]}
  previousAssociations={[Function Array]}
  removeNewAssociation={[Function EventEmitter]}
  removePreviousAssociation={[Function EventEmitter]}
  undoRemovePreviousAssociation={[Function EventEmitter]}
>
  <div
    class="job-association-associated-jobs"
    id="job-association-associated-jobs"
  >
    <h5>
      Matched Jobs
    </h5>
    <div
      class="position-relative"
    >
      <pf-async-container
        ng-reflect-hide-reload-button="true"
        ng-reflect-loading="false"
        ng-reflect-loading-error-message="Error loading associations"
      >
        
        
        <div>
          <table>
            <thead>
              <tr>
                <th
                  class="buttons"
                />
                <th
                  class="saved"
                />
                <th
                  class="title"
                >
                  Title
                </th>
                <th
                  class="code"
                >
                  Code
                </th>
              </tr>
            </thead>
            <tbody>
              
              
              <tr>
                <td>
                  
                  <button
                    class="association-action-button"
                    title="Remove"
                  >
                    <fa-icon
                      icon="times"
                    />
                  </button>
                  
                </td>
                <td>
                  
                  <pf-complete-icon
                    title="Saved Match"
                  />
                  
                </td>
                <td
                  class="show-tooltip"
                  ng-reflect-klass="show-tooltip"
                  ng-reflect-ng-class=""
                >
                   Job Title 
                </td>
                <td
                  class="show-tooltip"
                  ng-reflect-klass="show-tooltip"
                  ng-reflect-ng-class=""
                >
                   001 
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </pf-async-container>
    </div>
    
  </div>
</pf-peer-job-association-associated-jobs>
`;

exports[`AssociatedCompanyJobsComponent should show No Associations instead of the table if there are no jobs 1`] = `
<pf-peer-job-association-associated-jobs
  loadingPreviousAssociations="false"
  newAssociations={[Function Array]}
  previousAssociations={[Function Array]}
  removeNewAssociation={[Function EventEmitter]}
  removePreviousAssociation={[Function EventEmitter]}
  undoRemovePreviousAssociation={[Function EventEmitter]}
>
  <div
    class="job-association-associated-jobs"
    id="job-association-associated-jobs"
  >
    <h5>
      Matched Jobs
    </h5>
    <div
      class="position-relative"
    >
      <pf-async-container
        ng-reflect-hide-reload-button="true"
        ng-reflect-loading="false"
        ng-reflect-loading-error-message="Error loading associations"
      >
        
        
      </pf-async-container>
    </div>
    
    <div>
      <i>
        No Associations
      </i>
    </div>
  </div>
</pf-peer-job-association-associated-jobs>
`;

exports[`AssociatedCompanyJobsComponent should show jobs after loading successfully 1`] = `
<pf-peer-job-association-associated-jobs
  loadingPreviousAssociations="false"
  newAssociations={[Function Array]}
  removeNewAssociation={[Function EventEmitter]}
  removePreviousAssociation={[Function EventEmitter]}
  undoRemovePreviousAssociation={[Function EventEmitter]}
>
  <div
    class="job-association-associated-jobs"
    id="job-association-associated-jobs"
  >
    <h5>
      Matched Jobs
    </h5>
    <div
      class="position-relative"
    >
      <pf-async-container
        ng-reflect-hide-reload-button="true"
        ng-reflect-loading="false"
        ng-reflect-loading-error-message="Error loading associations"
      >
        
        
        <div>
          <table>
            <thead>
              <tr>
                <th
                  class="buttons"
                />
                <th
                  class="saved"
                />
                <th
                  class="title"
                >
                  Title
                </th>
                <th
                  class="code"
                >
                  Code
                </th>
              </tr>
            </thead>
            <tbody>
              
              <tr>
                <td>
                  <button
                    class="association-action-button"
                    title="Remove"
                  >
                    <fa-icon
                      icon="times"
                    />
                  </button>
                </td>
                <td>
                  <pf-half-complete-icon
                    title="Unsaved Match"
                  />
                </td>
                <td
                  class="font-italic show-tooltip"
                >
                  Job Title
                </td>
                <td
                  class="font-italic show-tooltip"
                >
                  001
                </td>
              </tr>
              
            </tbody>
          </table>
        </div>
      </pf-async-container>
    </div>
    
  </div>
</pf-peer-job-association-associated-jobs>
`;
